fixes small layout issues
- The `body_top_template` block should be in the expanded header because
  that is where information about payment processor connection state goes.

- dashboard.css contains CSS for 3rd party libraries. There is typically
  no need to change that CSS in DEBUG mode.

--- a/djaoapp/static/scss/base/djaodjin-dashboard.scss
+++ b/djaoapp/static/scss/base/djaodjin-dashboard.scss
@@ -557,11 +557,6 @@ input::-webkit-datetime-edit {
       left: 0;
     }
 
-    .dashboard-content > header,
-    .dashboard-content > .fullviewport > header {
-//      background-color: $dashboard-sidebar-bg;
-    }
-
     .dashboard-nav,
     .dashboard-inner-container .dashboard-nav {
         display: none;
